--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1>My Website</h1>
         <h3>This is my website.</h3>
         <p>I'm on github!</p>
-        <p>Follow me on <a href = "https://github.com/Mcmineskycoder"></a>.</p>
+        <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
         <p>I will improve my website.</p>
     </body>
 </html>
