--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <p>I'm on github!</p>
         <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
         <p>I will improve my website.</p>
-        <img src = "ICON.heic">
+        <img src = "ICON.png">
     </body>
 </html>
