--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>MCINESKYCODER'S WEBSITE</title>
+        <style>
+        	#pic{
+        		top:100px;
+        		left:300px;
+        	}
+        </style>
     </head>
     <body>
         <h1>My Website</h1>
@@ -9,6 +15,6 @@
         <p>I'm on github!</p>
         <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
         <p>I will improve my website.</p>
-        <img src = "https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png"/>
+        <img id = "pic" src ="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png"/>
     </body>
 </html>
