--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     </head>
     <body>
         <h1>My Website</h1>
-        <h3>This is my website.</h3>
+        <h3 id = 'heading'>This is my website.</h3>
         <p>I'm on github!</p>
         <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
         <p>I will improve my website.</p>
         <img id = "pic" src ="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png"/>
+        <script>
+            var status = "under repair";
+            alert(status);
+            if(status != "under repair"){
+                var heading = getElementById('heading');
+                var a = prompt("enter a new heading!")
+            }
+        </script>
     </body>
 </html>
