--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <p>I will improve my website.</p>
         <img id = "pic" src ="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png"/>
         <script>
-            var status = "under repair";
-            alert(status);
-            if(status != "under repair"){
-                var heading = getElementById('heading');
-                var a = prompt("enter a new heading!")
-            }
+            alert("家信");
+            alert("@妈 可以带上您的表了。");
+            alert("不用盯我");
+            alert("@爸 我尽量好好写作业")
+            alert("@ 佳佳 你真的不喜欢哥哥吗");
+            alert("12岁就是不一样");
         </script>
     </body>
 </html>
