--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             alert("不用盯我");
             alert("@爸 我尽量好好写作业")
             alert("@ 佳佳 你真的不喜欢哥哥吗");
+            var a = confirm("讨厌哥哥吗");
+            if(a === true)alert("哥哥伤心了")
+            else alert("太好了")
             alert("12岁就是不一样");
         </script>
     </body>
