--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         		left:300px;
         	}
         </style>
+        <link rel="icon" href="./ICON.png" sizes="16x16">
     </head>
     <body>
         <h1>My Website</h1>
@@ -15,7 +16,6 @@
         <p>I'm on github!</p>
         <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
         <p>I will improve my website.</p>
-        <img id = "pic" src ="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png"/>
         <script>
             alert("家信");
             alert("@妈 可以带上您的表了。");
