--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         		left:300px;
         	}
         </style>
-        <link rel="icon" href="./ICON.png" sizes="16x16">
+        <link rel="icon" href="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png" sizes="16x16">
     </head>
     <body>
-        <h1>My Website</h1>
-        <h3 id = 'heading'>This is my website.</h3>
-        <p>I'm on github!</p>
-        <p>Follow me on <a href = "https://github.com/Mcmineskycoder">https://github.com/Mcmineskycoder</a></p>
-        <p>I will improve my website.</p>
-        <script>
+        <h1>我的网页</h1>
+        <h3 id = 'heading'>这是俺的网页。[doge]</h3>
+        <a href = "https://www.github.com/Mcmineskycoder">我的GitHub</a>
+        <p>这个网页的<a href = "https://www.github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
+        <p>持续更新中</p>
+        <!--<script>
             alert("家信");
             alert("@妈 可以带上您的表了。");
             alert("不用盯我");
@@ -26,6 +26,6 @@
             if(a == true){alert("哥哥伤心了")}
             else{alert("太好了")}
             alert("12岁就是不一样");
-        </script>
+        </script>-->
     </body>
 </html>
