--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
     <head>
         <title>MCINESKYCODER'S WEBSITE</title>
         <style>
-        	#pic{
-        		top:100px;
-        		left:300px;
-        	}
         </style>
-        <link rel="icon" href="https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/ICON.png" sizes="16x16">
+        <link rel="icon" href="/ICON.png" sizes="16x16">
     </head>
     <body>
         <h1>我的网页</h1>
@@ -16,6 +12,7 @@
         <a href = "https://www.github.com/Mcmineskycoder">我的GitHub</a>
         <p>这个网页的<a href = "https://www.github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
         <p>持续更新中</p>
+        <img src="/HACK.png"/>
         <!--<script>
             alert("家信");
             alert("@妈 可以带上您的表了。");
