--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>我的网页</h1>
         <h3 id = 'heading'>这是俺的网页。[doge]</h3>
         <a href = "https://www.github.com/Mcmineskycoder">我的GitHub</a>
-        <p>这个网页的<a href = "https://www.github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
+        <p>这个网页的<a href = "/ICON.png">项目</a></p>
         <p>持续更新中</p>
         <img src="/HACK.png"/>
         <!--<script>
