--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
         <title>MCINESKYCODER'S WEBSITE</title>
         <style>
         </style>
-        <link rel="icon" href="/ICON.png" sizes="16x16">
+        <link rel="icon" href="/HACK.png" sizes="16x16">
     </head>
     <body>
         <h1>我的网页</h1>
         <h3 id = 'heading'>这是俺的网页。[doge]</h3>
         <a href = "https://www.github.com/Mcmineskycoder">我的GitHub</a>
-        <p>这个网页的<a href = "/ICON.png">项目</a></p>
+        <p>这个网页的<a href = "https://github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
         <p>持续更新中</p>
         <img src="/HACK.png"/>
-        <!--<script>
-            alert("家信");
-            alert("@妈 可以带上您的表了。");
-            alert("不用盯我");
-            alert("@爸 我尽量好好写作业")
-            alert("@ 佳佳 你真的不喜欢哥哥吗");
-            var a = confirm("讨厌哥哥吗");
-            if(a == true){alert("哥哥伤心了")}
-            else{alert("太好了")}
-            alert("12岁就是不一样");
-        </script>-->
     </body>
 </html>
