--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <title>MCINESKYCODER'S WEBSITE</title>
         <style>
+            p {
+                font-family: Helvetica, Arial, sans-serif;
+                font-weight: 400;
+                font-size: 12px;
+            }
+            h1 {
+                font-family: Helvetica, Arial, sans-serif;
+                font-weight: 700;
+            }
         </style>
         <link rel="icon" href="/HACK.png" sizes="16x16">
     </head>
