--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
         <title>MCINESKYCODER'S WEBSITE</title>
         <style>
             p {
-                font-family: Helvetica, Arial, sans-serif;
+                font-family: 'Open Sans';
                 font-weight: 400;
                 font-size: 12px;
             }
             h1 {
-                font-family: Helvetica, Arial, sans-serif;
+                font-family: 'Open Sans';
                 font-weight: 700;
             }
+            em {
+                font-family: 'Open Sans';
+                font-style: italic;
+            }
+            @font-face {
+                font-family: 'Open Sans';
+                src: url('OpenSans-Regular.ttf') format('truetype'),
+                url('OpenSans-Italic.ttf') format('truetype');
+
+            }
         </style>
-        <link rel="icon" href="/HACK.png" sizes="16x16">
+        <link rel="icon" href="./HACK.png" sizes="16x16">
     </head>
     <body>
         <h1>我的网页</h1>
