--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             }
             @font-face {
                 font-family: 'Open Sans';
-                src: url('OpenSans-Regular.ttf') format('truetype'),
-                url('OpenSans-Italic.ttf') format('truetype');
+                src: url('./OpenSans-Regular.ttf') format('truetype'),
+                url('./OpenSans-Italic.ttf') format('truetype');
 
             }
         </style>
