--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
                 font-family: 'Open Sans';
                 font-weight: 700;
             }
-            em {
-                font-family: 'Open Sans';
-                font-style: italic;
-            }
+            
             @font-face {
                 font-family: 'Open Sans';
-                src: url('./OpenSans-Regular.ttf') format('truetype'),
-                url('./OpenSans-Italic.ttf') format('truetype');
+                src: url('./OpenSans-Regular.ttf') format('truetype');
 
             }
         </style>
