--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MCINESKYCODER'S WEBSITE</title>
+        <title>MCMINESKYCODER'S WEBSITE</title>
         <style>
+            @font-face {
+                font-family: 'Open Sans';
+                src: url('./OpenSans-Regular.ttf') format('truetype');
+
+            }
             p {
                 font-family: 'Open Sans';
                 font-weight: 400;
@@ -13,11 +18,7 @@
                 font-weight: 700;
             }
             
-            @font-face {
-                font-family: 'Open Sans';
-                src: url('./OpenSans-Regular.ttf') format('truetype');
-
-            }
+            
         </style>
         <link rel="icon" href="./HACK.png" sizes="16x16">
     </head>
