--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
         <p>这个网页的<a href = "https://github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
         <p>持续更新中</p>
         <img src="/HACK.png"/>
+        <hr>我的GeoGebra项目
+        <iframe src="https://www.geogebra.org/classic/c6xjvz4b?embed" width="800" height="600" allowfullscreen style="border: 1px solid #e4e4e4;border-radius: 4px;" frameborder="0"></iframe>
     </body>
 </html>
