--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             @font-face {
                 font-family: 'Open Sans';
-                src: url('./OpenSans-Regular.ttf') format('truetype');
+                src: url('https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/OpenSans-Regular.ttf/') format('truetype');
 
             }
             p {
