--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>MCMINESKYCODER'S WEBSITE</title>
         <style>
             @font-face {
-                font-family: 'Source Sans';
-                src: url('/OTF/SourceSans3-Regular.otf') format('truetype');
+                font-family: 'Source Sans', sans-serif;
+                src: url('/OTF/SourceSans3-Regular.otf') format("opentype");
 
             }
             p {
