--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>MCMINESKYCODER'S WEBSITE</title>
         <style>
             @font-face {
-                font-family: 'Source Sans', sans-serif;
-                src: url('/OTF/SourceSans3-Regular.otf') format("opentype");
+                font-family: '思源黑体', sans-serif;
+                src: url('https://github.com/Mcmineskycoder/Mcmineskycoder.github.io/blob/main/%E6%80%9D%E6%BA%90%E9%BB%91%E4%BD%93/SubsetOTF/CN/SourceHanSansCN-Regular.otf') format("opentype");
 
             }
             p {
