--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             h3 {
                 font-family: "思源黑体";
             }
+            #time {
+                position: fixed;
+                width:100%;
+                bottom: 20%;
+                left: 20%;
+            }
             
         </style>
         <link rel="icon" href="./HACK.png" sizes="16x16">
