--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 font-family: "思源黑体";
             }
             #time {
+                outline: thick double #32a1ce;
                 position: fixed;
                 width:100%;
                 bottom: 20%;
