--- a/index.html
+++ b/index.html
@@ -46,15 +46,7 @@
         </p>
         <p>这个网页的<a href = "https://github.com/Mcmineskycoder/Mcmineskycoder.github.io">项目</a></p>
         <p>持续更新中</p>
-        <div id="time">
-            <a href="https://time.is/Shanghai" id="time_is_link" rel="nofollow" style="font-size:36px">上海时间:</a>
-            <span id="Shanghai_z43d" style="font-size:36px"></span>
-            <script src="//widget.time.is/zh.js"></script>
-            <script>
-                time_is_widget.init({Shanghai_z43d:{template:"TIME<br>DATE<br>SUN", date_format:"year-monthnum-daynum dayname", sun_format:"日出: srhour:srminute 日落: sshour:ssminute", coords:"31.2222200,121.4580600"}});
-            </script>
-
-        </div>
+        <a href="/time.html">时间</a>
         <img src="/HACK.png"/>
         
         
