--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <link rel="icon" href="./HACK.png" sizes="16x16">
     </head>
     <body>
-        <a href="/index.html">HOME</a>
-        <a href="/time.html">time</a>
+        
+        <a href=/time.html>time</a>
         <h1>我的网页</h1>
         <h3>这是俺的网页。[doge]</h3>
         <p>
