--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <span id="homepage"><a href = "https://moraxborax.github.io/index.html">homepage</a></span>
             <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
             <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span>   
+            <span id="portfolio"><a href="./portfolio.html">My portfolio</a></span>
         </div>
         <div id="main">
         <h1 id="title">MY WEBSITE</h1>
