a bit new change

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./paimon.png" sizes="144*144">
 </head>
 <body>
-    <h1>My portfolio</h1>
+    <h1 id="title">My portfolio</h1>
 </body>
 </html>
