--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,6 @@
     <link rel="icon" href="./paimon.png" sizes="144*144">
 </head>
 <body>
-    <h1 id="title">My portfolio</h1>
+    <h1 class="title">My portfolio</h1>
 </body>
 </html>
