portfolio file changed

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,14 @@
     <link rel="icon" href="./paimon.png" sizes="144*144">
 </head>
 <body>
+    <div class="bar">
+        <span id="homepage"><a href = "https://moraxborax.github.io/index.html">homepage</a></span>
+        <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
+        <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span>   
+        <span id="portfolio"><a href="./portfolio.html">My portfolio</a></span>
+    </div>
+    <div class="main">
     <h1 class="title">My portfolio</h1>
+    </div>
 </body>
 </html>
