--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h3>changelog</h3>
                 <ul>
                     <li>2024.3.7 changelog added</li>
-                    <li> 2024.10 bar & dark mode added</li>
+                    <li> 2024.10 bar & dark mode added, portfolio page added</li>
                 </ul>
             </div>
         </div>
