--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
         <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
         <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span>   
         <span id="portfolio"><a href="./portfolio.html">My portfolio</a></span>
+        <input type="image" onclick="toggleMode()" src="./Button/Light Mode.png" id="dmbutton" /><!--Toggle Mode-->
     </div>
     <div class="main">
     <h1 class="title">My portfolio</h1>
