dark mode button is completed!

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
             <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span>   
             <span id="portfolio"><a href="./portfolio.html">My portfolio</a></span>
-            <input type="image" onclick="toggleMode()" src="./Button/Light Mode.png" id="dmbutton" /><!--Toggle Mode-->
+            <input type="image" onclick="toggleMode()"  id="dmbutton" /><!--Toggle Mode--><!--src="./Button/Light Mode.png"-->
         </div>
         <!-- dark mode toggler-->
         <script src="./dark-mode.js"></script>
@@ -35,7 +35,8 @@
                 <h3>changelog</h3>
                 <ul>
                     <li>2024.3.7 changelog added</li>
-                    <li> 2024.10 bar & dark mode added, portfolio page added</li>
+                    <li>2024.10 bar & dark mode added, portfolio page added</li>
+                    <li>2024.11 dark mode completed</li>
                 </ul>
             </div>
         </div>
