--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li>2024.3.7 changelog added</li>
                     <li>2024.10 bar & dark mode added, portfolio page added</li>
                     <li>2024.11 dark mode completed</li>
+                    <li>2024.11 idk if it's really fixed</li>
                 </ul>
             </div>
         </div>
