now added a line for the csml proj

--- a/csml.html
+++ b/csml.html
@@ -17,6 +17,8 @@
             <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
             <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span>   
             <span id="portfolio"><a href="./portfolio.html">My portfolio</a></span>
+            <span id="csml"><a href="./csml.html">CSML</a></span>
+            <span id="csml project"><a href="https://github.com/moraxborax/csml"></a></span>
             <input type="image" onclick="toggleMode()"  id="dmbutton" /><!--Toggle Mode--><!--src="./Button/Light Mode.png"-->
         </div>
         <!-- dark mode toggler-->
