--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li>2024.10 bar & dark mode added, portfolio page added</li>
                     <li>2024.11 dark mode completed</li>
                     <li>2024.11 idk if it's really fixed</li>
+                    <li>2025.12.23 brand new revamp</li>
                 </ul>
             </div>
         </div>
