fix a small bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span id="homepage"><a href = "./index.html">homepage</a></span>
             <span id="github" ><a href = "https://www.github.com/moraxborax">my GitHub</a></span>
             <span id="project"><a href = "https://github.com/moraxborax/moraxborax.github.io">repository of this project</a></span> 
-            <span id="docs"><a href = "moraxborax.github.io/docs">docs</a></span>   
+            <span id="docs"><a href = "https://moraxborax.github.io/docs">docs</a></span>   
             <input type="image" onclick="toggleMode()"  id="dmbutton" /><!--Toggle Mode--><!--src="./Button/Light Mode.png"-->
         </div>
         <!-- dark mode toggler-->
